[project]
name = "opencow"
version = "0.2.0"
description = "A lightweight personal AI agent framework powered by LangChain and LangGraph"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "OpenCow" }]
readme = "README.md"

dependencies = [
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "aiohttp>=3.9.0",
    "pyyaml>=6.0",
    "croniter>=2.0.0",
    "filelock>=3.0.0",
    "httpx>=0.27.0",
    "tiktoken>=0.7.0",
    "jinja2>=3.1.0",
    "tzdata>=2024.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]
feishu = ["lark-oapi>=1.3.0"]
telegram = ["python-telegram-bot>=21.0"]
search = ["tavily-python>=0.4.0"]
mcp = ["langchain-mcp-adapters>=0.1.0"]

[project.scripts]
opencow = "opencow.cli.commands:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["opencow"]
